# jpasLAE

./: README.md  pyproject.toml  zero_point.py
src/jpasLAEs/: images.py  load_jpas_catalogs.py  plot_jpas.py  utils.py  zero_point.py
src/jpasLAEs/data/: FILTERs_table.fits  JPAS_J0348.tab  JPAS_J0378.tab  JPAS_J0390.tab  JPAS_J0400.tab  JPAS_J0410.tab  JPAS_J0420.tab  JPAS_J0430.tab  JPAS_J0440.tab  JPAS_J0450.tab  JPAS_J0460.tab  JPAS_J0470.tab  JPAS_J0480.tab  JPAS_J0490.tab  JPAS_J0500.tab  JPAS_J0510.tab  JPAS_J0520.tab  JPAS_J0530.tab  JPAS_J0540.tab  JPAS_J0550.tab  JPAS_J0560.tab  JPAS_J0570.tab  JPAS_J0580.tab  JPAS_J0590.tab  JPAS_J0600.tab  JPAS_J0610.tab  JPAS_J0620.tab  JPAS_J0630.tab  JPAS_J0640.tab  JPAS_J0650.tab  JPAS_J0660.tab  JPAS_J0670.tab  JPAS_J0680.tab  JPAS_J0690.tab  JPAS_J0700.tab  JPAS_J0710.tab  JPAS_J0720.tab  JPAS_J0730.tab  JPAS_J0740.tab  JPAS_J0750.tab  (+26 more)
