[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jpasLAEs"
version = "0.4.13"
authors = [
  { name="Alberto Torralba", email="alberto.torralba@uv.es" },
]
description = "Utilities to work with J-PAS LAEs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/totoal/jpasLAE"

[tool.setuptools.package-data]
"jpasLAEs.data" = ["*.fits", "*.tab", "*.csv"]


